...
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.fragments.DetailsFragment"
        android:id="@+id/detailsFragment">


        <ImageView
            android:id="@+id/ivPosterFull"
            android:layout_width="0dp"
            android:layout_height="0dp"
...
            app:layout_constraintBottom_toTopOf="@+id/guideline6"
            app:layout_constraintEnd_toStartOf="@+id/guideline5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline4" />

        <TextView
            android:id="@+id/tvTitleContent"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="7"
            android:gravity="center"
            android:padding="4dp"
            android:text="@{details.title}"
...
